WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64536
[EFL] Ignore empty requests on policy decisions.
https://bugs.webkit.org/show_bug.cgi?id=64536
Summary
[EFL] Ignore empty requests on policy decisions.
Raphael Kubo da Costa (:rakuco)
Reported
2011-07-14 10:06:07 PDT
[EFL] Ignore empty requests on policy decisions.
Attachments
Patch
(3.47 KB, patch)
2011-07-14 10:07 PDT
,
Raphael Kubo da Costa (:rakuco)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Raphael Kubo da Costa (:rakuco)
Comment 1
2011-07-14 10:07:13 PDT
Created
attachment 100821
[details]
Patch
Gyuyoung Kim
Comment 2
2011-07-19 19:02:40 PDT
LGTM.
Raphael Kubo da Costa (:rakuco)
Comment 3
2011-07-25 14:42:15 PDT
CC'ing tonikitoo in hopes that the patch gets an r+.
Kenneth Rohde Christiansen
Comment 4
2011-08-02 12:01:53 PDT
Comment on
attachment 100821
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=100821&action=review
As other ports are doing this, I will go ahead and say r+, but maybe it could/should be fixed elsewhere.
> Source/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:292 > + > + if (resourceRequest.isNull()) { > + callPolicyFunction(function, PolicyIgnore);
Why would this be called when the resource request is empty anyway? I mean, shouldn't this be fixed elsewhere?
WebKit Review Bot
Comment 5
2011-08-02 12:50:19 PDT
Comment on
attachment 100821
[details]
Patch Clearing flags on attachment: 100821 Committed
r92216
: <
http://trac.webkit.org/changeset/92216
>
WebKit Review Bot
Comment 6
2011-08-02 12:50:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug