[EFL] Ignore empty requests on policy decisions. https://bugs.webkit.org/show_bug.cgi?id=64536

Patch by Raphael Kubo da Costa <kubo@profusion.mobi> on 2011-08-02
Reviewed by Kenneth Rohde Christiansen.

This is the same fix introduced in the GTK+ port in r41313: empty
request should be ignored, so tests such as
fast/loader/empty-embed-src-attribute.html do not crash.

* WebCoreSupport/FrameLoaderClientEfl.cpp:
(WebCore::FrameLoaderClientEfl::dispatchDecidePolicyForResponse):
(WebCore::FrameLoaderClientEfl::dispatchDecidePolicyForNewWindowAction):
(WebCore::FrameLoaderClientEfl::dispatchDecidePolicyForNavigationAction):

Canonical link: https://commits.webkit.org/81356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92216 268f45cc-cd09-0410-ab3c-d52691b4dbfc